--- a/asf.ipynb
+++ b/asf.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,127 +157,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "if search_list:\n",
-    "    \n",
-    "    sar_software_comparison_20m_list = [\n",
-    "    \n",
-    "        # Antarctica - Law Dome (-66.163448 113.66396)\n",
-    "        'S1B_IW_SLC__1SSH_20211204T123606_20211204T123635_029875_039105_E7EC',\n",
-    "        'S1A_IW_SLC__1SSH_20211210T123647_20211210T123716_040946_04DCF0_9FBA',\n",
-    "        'S1B_IW_SLC__1SSH_20211216T123605_20211216T123634_030050_03968D_9501',\n",
-    "        # Antarctica - Ross Island (-77.7018, 166.7541)\n",
-    "        'S1A_IW_SLC__1SSH_20211208T124745_20211208T124815_040917_04DBED_5CFF',\n",
-    "        'S1A_IW_SLC__1SSH_20211220T124745_20211220T124815_041092_04E1C2_0475',\n",
-    "        'S1A_IW_SLC__1SSH_20220101T124744_20220101T124814_041267_04E7A2_1DAD',\n",
-    "        # Antarctica - Heard/McDonald Island (-53.1057, 73.543) \n",
-    "        'S1A_IW_SLC__1SSH_20220103T141935_20220103T142005_041297_04E8B4_9B44',\n",
-    "        'S1A_IW_SLC__1SSH_20220108T142747_20220108T142815_041370_04EB2C_4E64',\n",
-    "        'S1A_IW_SLC__1SSH_20220115T141935_20220115T142005_041472_04EE7C_9E3D',\n",
-    "        # Antarctica - Antimeridian (-70, 180) approx - These Failed through hyp3\n",
-    "        'S1A_IW_SLC__1SSH_20220203T153614_20220203T153644_041750_04F7DF_8C3E',\n",
-    "        'S1A_IW_SLC__1SSH_20220122T153615_20220122T153645_041575_04F1EF_9254',\n",
-    "        # Antarctica - Antimeridian (-75, 180) approx\n",
-    "        'S1A_IW_SLC__1SDV_20191028T131928_20191028T131947_029659_0360CA_A1A0',\n",
-    "        'S1A_IW_SLC__1SDH_20161201T131103_20161201T131131_014186_016EB7_F766',\n",
-    "        # Australia - Queensland Forest (-25.533333 147.533333)\n",
-    "        'S1A_IW_SLC__1SDV_20220121T193807_20220121T193834_041563_04F181_5804',\n",
-    "        'S1A_IW_SLC__1SDV_20220202T084138_20220202T084206_041731_04F740_197D',\n",
-    "        'S1A_IW_SLC__1SDV_20220202T084204_20220202T084231_041731_04F740_400F',\n",
-    "    ] \n",
     "\n",
-    "    sar_software_comparison_10m_list = [\n",
-    "        # Antarctica - Maitri Station (-70.76683, 11.7308)\n",
-    "        'S1B_IW_SLC__1SSH_20190327T195016_20190327T195045_015544_01D236_9504',\n",
-    "        'S1B_IW_SLC__1SSH_20190526T195018_20190526T195048_016419_01EE8D_53BC',\n",
-    "        'S1B_IW_SLC__1SSH_20190315T195015_20190315T195045_015369_01CC73_DB8B',\n",
-    "        # Antarctica - Bharati Station (-69.4068, 76.19525)\n",
-    "        'S1B_IW_SLC__1SSH_20190223T222639_20190223T222706_015079_01C2E9_1D63',\n",
-    "        'S1A_IW_SLC__1SSH_20190605T222724_20190605T222751_027550_031BE1_AD3A',\n",
-    "        # Australia - Yaragadee (-29.0474, 115.3461) Descending (Only Avail)\n",
-    "        'S1B_IW_SLC__1SDV_20211201T214143_20211201T214210_029837_038FD8_81C3',\n",
-    "        'S1B_IW_SLC__1SDV_20211201T214208_20211201T214240_029837_038FD8_8B37',\n",
-    "        'S1B_IW_SLC__1SDV_20211213T214143_20211213T214210_030012_039555_8753',\n",
-    "    ]\n",
-    "    \n",
-    "    iw_scene_list = []\n",
-    "\n",
-    "    ew_scene_list = [\n",
-    "        'S1A_EW_GRDM_1SDH_20220225T174025_20220225T174129_042072_050315_7C35',\n",
-    "        'S1A_EW_GRDM_1SDH_20221023T174035_20221023T174139_045572_0572D2_CD12',\n",
-    "        'S1A_EW_GRDM_1SDH_20190924T112554_20190924T112659_029162_034FAB_41A7',\n",
-    "        'S1A_EW_GRDM_1SDH_20230118T112609_20230118T112713_046837_059DB3_9C85',\n",
-    "        'S1B_EW_GRDM_1SDH_20210221T234712_20210221T234816_025711_0310AD_3C16',\n",
-    "        'S1B_EW_GRDM_1SDH_20210304T000326_20210304T000430_025857_031578_789C',\n",
-    "    ]\n",
-    "\n",
-    "    sm_scene_list = [\n",
-    "        'S1A_S3_SLC__1SSH_20230925T000119_20230925T000138_050476_06143F_154F',\n",
-    "        'S1A_S3_SLC__1SSH_20200108T000054_20200108T000113_030701_0384ED_8266'\n",
-    "    ]\n",
-    "\n",
-    "    qld_CR_list = [\n",
-    "        # Australia - QLD corner reflector (-27.0252,150.5759) - (ASCENDING MODE REQUIRED)\n",
-    "        'S1A_IW_SLC__1SSV_20230312T083311_20230312T083339_047608_05B7B4_9E47',\n",
-    "        'S1A_IW_SLC__1SSH_20230417T083309_20230417T083337_048133_05C96C_990D',\n",
-    "        'S1A_IW_SLC__1SSV_20230523T083310_20230523T083338_048658_05DA2F_A8C3',\n",
-    "        'S1A_IW_SLC__1SSH_20230722T083317_20230722T083345_049533_05F4C7_7C1C',\n",
-    "        'S1A_IW_SLC__1SSV_20230803T083315_20230803T083342_049708_05FA2F_3DCE',\n",
-    "        'S1A_IW_SLC__1SSH_20230908T083317_20230908T083344_050233_060BEC_D8D5',\n",
-    "        'S1A_IW_SLC__1SSV_20231014T083317_20231014T083345_050758_061DE7_512C',\n",
-    "        'S1A_IW_SLC__1SSH_20231119T083317_20231119T083345_051283_062FEC_0B2C',\n",
-    "        'S1A_IW_SLC__1SSV_20231225T083315_20231225T083343_051808_064216_090C',\n",
-    "        # 'S1A_IW_SLC__1SSH_20240106T083314_20240106T083342_051983_064812_8D7E',\n",
-    "        # 'S1A_IW_SLC__1SSV_20240118T083314_20240118T083341_052158_064E01_F2FB',\n",
-    "        # 'S1A_IW_SLC__1SSH_20240130T083313_20240130T083341_052333_0653F0_B544',\n",
-    "    ]\n",
-    "\n",
-    "    qld_rainforest_timeseries_list = [\n",
-    "        'S1A_IW_SLC__1SDV_20221220T191402_20221220T191429_046419_058F94_70A0',\n",
-    "        'S1A_IW_SLC__1SDV_20221208T191403_20221208T191430_046244_058998_28A3',\n",
-    "        'S1A_IW_SLC__1SDV_20221126T191403_20221126T191430_046069_05839D_9DD9',\n",
-    "        'S1A_IW_SLC__1SDV_20221102T191403_20221102T191430_045719_0577C9_B76C',\n",
-    "        'S1A_IW_SLC__1SDV_20221009T191404_20221009T191431_045369_056CB2_5D9E',\n",
-    "        'S1A_IW_SLC__1SDV_20220915T191403_20220915T191430_045019_0560F2_B29C',\n",
-    "        'S1A_IW_SLC__1SDV_20220822T191402_20220822T191429_044669_05552A_4729',\n",
-    "        'S1A_IW_SLC__1SDV_20220729T191401_20220729T191428_044319_054A0A_E294',\n",
-    "        'S1A_IW_SLC__1SDV_20220705T191359_20220705T191426_043969_053FA4_EAFD',\n",
-    "        'S1A_IW_SLC__1SDV_20220611T191358_20220611T191425_043619_053532_39C3',\n",
-    "        'S1A_IW_SLC__1SDV_20220424T191355_20220424T191422_042919_051FA1_3965',\n",
-    "        'S1A_IW_SLC__1SDV_20220331T191354_20220331T191421_042569_0513ED_EDBB',\n",
-    "        'S1A_IW_SLC__1SDV_20220307T191354_20220307T191421_042219_050811_3A95',\n",
-    "        'S1A_IW_SLC__1SDV_20220211T191354_20220211T191421_041869_04FC03_7559',\n",
-    "        'S1A_IW_SLC__1SDV_20220130T191354_20220130T191421_041694_04F5F9_1AFD',\n",
-    "        'S1A_IW_SLC__1SDV_20220106T191355_20220106T191422_041344_04EA48_E185',\n",
-    "    ]\n",
-    "\n",
-    "    qld_forest_timeseries_list = [\n",
-    "        'S1A_IW_SLC__1SDV_20220109T084205_20220109T084232_041381_04EB86_4CA4',\n",
-    "        'S1A_IW_SLC__1SDV_20220214T084204_20220214T084231_041906_04FD5B_3E6A',\n",
-    "        'S1A_IW_SLC__1SDV_20220322T084204_20220322T084231_042431_050F45_D995',\n",
-    "        'S1A_IW_SLC__1SDV_20220427T084205_20220427T084232_042956_0520DA_A334',\n",
-    "        'S1A_IW_SLC__1SDV_20220509T084206_20220509T084232_043131_0526B1_B779',\n",
-    "        'S1A_IW_SLC__1SDV_20220602T084207_20220602T084234_043481_053115_3E34',\n",
-    "        'S1A_IW_SLC__1SDV_20220708T084210_20220708T084237_044006_0540C0_A559',\n",
-    "        'S1A_IW_SLC__1SDV_20220813T084212_20220813T084239_044531_055086_7B90',\n",
-    "        'S1A_IW_SLC__1SDV_20220918T084213_20220918T084240_045056_056239_CBF0',\n",
-    "        'S1A_IW_SLC__1SDV_20221024T084214_20221024T084241_045581_057328_A643',\n",
-    "        'S1A_IW_SLC__1SDV_20221129T084213_20221129T084240_046106_0584E7_6C64',\n",
-    "        'S1A_IW_SLC__1SDV_20221223T084212_20221223T084238_046456_0590D9_7BFF',\n",
+    "    search_scenes = [\n",
+    "        'S1A_IW_SLC__1SDV_20240719T195219_20240719T195246_054834_06AD81_2850',\n",
+    "        'S1A_IW_SLC__1SDV_20240625T195220_20240625T195247_054484_06A15E_25DD',\n",
+    "        'S1A_IW_SLC__1SDV_20240601T195221_20240601T195248_054134_06953D_BA35',\n",
+    "        'S1A_IW_SLC__1SDV_20240508T195222_20240508T195249_053784_06892A_14BF',\n",
+    "        'S1A_IW_SLC__1SDV_20240414T195221_20240414T195248_053434_067B76_7297',\n",
+    "        'S1A_IW_SLC__1SDV_20240321T195221_20240321T195248_053084_066DEF_BB5C',\n",
+    "        'S1A_IW_SLC__1SDV_20240226T195220_20240226T195247_052734_066181_BA46',\n",
+    "        'S1A_IW_SLC__1SDV_20240202T195221_20240202T195248_052384_0655AE_65A0',\n",
+    "        'S1A_IW_SLC__1SDV_20240109T195221_20240109T195248_052034_0649D6_1FF6',\n",
+    "        'S1A_IW_SLC__1SDV_20231216T195223_20231216T195250_051684_063DCD_4ADC',\n",
+    "        'S1A_IW_SLC__1SDV_20231122T195224_20231122T195251_051334_0631B4_AC2B',\n",
+    "        'S1A_IW_SLC__1SDV_20231029T195225_20231029T195251_050984_06259C_6024',\n",
+    "        'S1A_IW_SLC__1SDV_20231005T195224_20231005T195251_050634_0619A2_216F',\n",
+    "        'S1A_IW_SLC__1SDV_20230911T195224_20230911T195251_050284_060DB2_CC96',\n",
+    "        'S1A_IW_SLC__1SDV_20230818T195223_20230818T195250_049934_0601BA_AE0C'\n",
     "    ]\n",
     "\n",
     "    # search the scene list with the specified product type\n",
-    "    iw_results = asf.granule_search(iw_scene_list, asf.ASFSearchOptions(processingLevel='SLC'))\n",
-    "    ew_results = asf.granule_search(ew_scene_list, asf.ASFSearchOptions(processingLevel='GRD_MD'))\n",
-    "    sm_results = asf.granule_search(sm_scene_list, asf.ASFSearchOptions(processingLevel='SLC'))\n",
-    "    qld_cr_results = asf.granule_search(qld_CR_list, asf.ASFSearchOptions(processingLevel='SLC'))\n",
-    "    qld_rainforest_results = asf.granule_search(qld_rainforest_timeseries_list, asf.ASFSearchOptions(processingLevel='SLC'))\n",
-    "    qld_forest_results = asf.granule_search(qld_forest_timeseries_list, asf.ASFSearchOptions(processingLevel='SLC'))\n",
-    "    sar_software_comparison_20m_results = asf.granule_search(sar_software_comparison_20m_list, asf.ASFSearchOptions(processingLevel='SLC'))\n",
-    "    sar_software_comparison_10m_results = asf.granule_search(sar_software_comparison_10m_list, asf.ASFSearchOptions(processingLevel='SLC'))"
+    "    results = asf.granule_search(search_scenes, asf.ASFSearchOptions(processingLevel='SLC'))"
    ]
   },
   {
@@ -289,22 +194,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# searh through time\n",
     "if not search_list:\n",
+    "\n",
+    "    wkt = \"POINT (145.225097 -16.422876)\" # Daintree Rainforest\n",
+    "\n",
+    "    # product\n",
     "    # prod = 'GRD_HS' # IW\n",
     "    # prod = 'GRD_MD' # EW\n",
-    "\n",
-    "    #wkt = \"POINT (147.533333 -25.533333)\" # Austraia - Queensland Forest Timeseries\n",
-    "    #wkt = \"POINT (152.604 -26.637)\" # Austraia - Queensland Rainforest Forest\n",
-    "    wkt = \"POINT (150.5759 -27.0252)\" # Australia QLD Corner Reflector\n",
-    "\n",
-    "    # prod = 'GRD_HD'\n",
-    "    # prod = 'GRD_MS'\n",
-    "    # prod = 'GRD_FD'\n",
     "    prod = 'SLC'\n",
     "\n",
     "    # acquisition mode\n",
@@ -312,11 +213,8 @@
     "    #mode = 'EW'\n",
     "    #mode = ['S1','S2','S3','S4','S5','S6']\n",
     "\n",
-    "    # start_date = '2021-12-01T00:00:00Z'\n",
-    "    # end_date = '2022-02-28T00:00:00Z'\n",
-    "\n",
-    "    start_date = '2023-01-01T00:00:00Z'\n",
-    "    end_date = '2023-12-31T00:00:00Z'\n",
+    "    start_date = '2023-08-01T00:00:00Z'\n",
+    "    end_date = '2024-07-31T00:00:00Z'\n",
     "\n",
     "    results = asf.search(platform=[asf.PLATFORM.SENTINEL1], \n",
     "                        intersectsWith=wkt, \n",
@@ -325,7 +223,6 @@
     "                        beamMode=mode,\n",
     "                        start=start_date,\n",
     "                        end=end_date,\n",
-    "                        frame= 1088 #1097\n",
     "                        )\n",
     "    search_scenes = []\n",
     "    for r in reversed(results):\n",
@@ -341,14 +238,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = qld_cr_results\n",
-    "#print(len(results))\n",
-    "# for r in results[0:1]:\n",
-    "#      for i,x in enumerate(r.__dict__['umm']['AdditionalAttributes']):\n",
-    "#           print(i,x)\n",
-    "# for i,x in enumerate(search_scenes):\n",
-    "#     if (i%3 == 0) or (i==10) or (i==len(search_scenes)-1):\n",
-    "#         print(x)"
+    "for i,r in enumerate(results):\n",
+    "     if (i%2==1):\n",
+    "          continue\n",
+    "     print(r.properties['sceneName'], r.properties)"
    ]
   },
   {
@@ -390,13 +283,12 @@
     "#plot\n",
     "colours = ['green' if 'IW' in x else ('blue' if 'EW' in x else 'red') for x in scene_locations.keys()]\n",
     "plot_polygons(scene_locations.values(), (-180,180,-90,-53), colours=colours)\n",
-    "plot_polygons(scene_locations.values(), (110,160,-45,-8), colours=colours, proj='plate')\n",
-    "\n"
+    "plot_polygons(scene_locations.values(), (110,160,-45,-8), colours=colours, proj='plate')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,27 +325,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "projects = {\n",
-    "    'sar-software-comparison-20m': sar_software_comparison_20m_list,\n",
-    "    'sar-software-comparison-10m': qld_CR_list,\n",
-    "    'qld-rainforest-timeseries-20m-2022' : qld_rainforest_timeseries_list,\n",
-    "    'qld-forest-timeseries-20m-2022' : qld_forest_timeseries_list,\n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "# set the proj name\n",
-    "proj_name = 'sar-software-comparison-10m'\n",
-    "#proj_name = 'qld-cr-2022-01'"
+    "# a unique project name is needed \n",
+    "PROJECT_NAME = 'daintree-rainforest-timeseries-20m-2024'\n",
+    "SCENE_LIST = search_scenes\n"
    ]
   },
   {
@@ -464,15 +343,14 @@
    "source": [
     "# submit jobs\n",
     "rtc_jobs = sdk.Batch()\n",
-    "scene_list = projects[proj_name]\n",
-    "for g in scene_list:\n",
+    "for g in SCENE_LIST:\n",
     "    rtc_jobs += hyp3.submit_rtc_job(g, \n",
     "                                    include_dem=True, #include dem in final product\n",
     "                                    include_inc_map=True,  #include dem map in final product\n",
     "                                    include_rgb=True,  #include rgb img in final product\n",
     "                                    include_scattering_area=True, #include scat area in final product\n",
-    "                                    name=proj_name,\n",
-    "                                    resolution=10,\n",
+    "                                    name=PROJECT_NAME,\n",
+    "                                    resolution=20,\n",
     "                                    dem_name='copernicus',\n",
     "                                    radiometry='gamma0')\n",
     "print(rtc_jobs)\n"
@@ -504,7 +382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rtc_jobs = hyp3.find_jobs(name=proj_name)\n",
+    "rtc_jobs = hyp3.find_jobs(name=PROJECT_NAME)\n",
     "rtc_jobs = hyp3.watch(rtc_jobs)"
    ]
   },
@@ -521,7 +399,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rtc_jobs = hyp3.find_jobs(name=proj_name)\n",
+    "print(PROJECT_NAME)\n",
+    "rtc_jobs = hyp3.find_jobs(name=PROJECT_NAME)\n",
     "rtc_jobs = hyp3.refresh(rtc_jobs)\n",
     "running_jobs = rtc_jobs.filter_jobs(succeeded=False, running=True, failed=False)\n",
     "print(f'Number of running jobs: {len(running_jobs)}')\n",
@@ -529,20 +408,6 @@
     "print(f'Number of succeeded jobs: {len(succeeded_jobs)}')\n",
     "failed_jobs = rtc_jobs.filter_jobs(succeeded=False, running=False, failed=True)\n",
     "print(f'Number of failed jobs: {len(failed_jobs)}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "succeeded_jobs\n",
-    "download_jobs = []\n",
-    "for j in succeeded_jobs:\n",
-    "    print(j.job_parameters['radiometry'])\n",
-    "    if j.job_parameters['radiometry'] == 'gamma0':\n",
-    "        download_jobs.append(j)"
    ]
   },
   {
@@ -556,20 +421,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "download_folder = '/data/hyp3-gamma'\n",
     "s3_bucket = 'deant-data-public-dev'\n",
-    "s3_bucket_folder = proj_name\n",
+    "s3_bucket_folder = f'sar-comparison-study/s1-rtc-scenes/{PROJECT_NAME}'\n",
     "push_to_s3 = True\n",
     "delete_after_upload = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +472,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#download_jobs = succeeded_jobs\n",
+    "download_jobs = succeeded_jobs\n",
     "for i,job in enumerate(download_jobs):\n",
     "    print(f'scene {i+1} of {len(download_jobs)}')\n",
     "    # download\n",
@@ -615,7 +480,7 @@
     "    process_time = job.processing_times\n",
     "    _, filename = ntpath.split(str(file_list[0]))\n",
     "    st = filename.split('_')[2]\n",
-    "    scene = [x for x in projects[proj_name] if st in x][0]\n",
+    "    scene = [x for x in SCENE_LIST if st in x][0]\n",
     "    print(scene)\n",
     "    # unzip\n",
     "    with zipfile.ZipFile(file_list[0], 'r') as zip_ref:\n",
@@ -896,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
